# slq

./: Cargo.toml  compose.yaml  todo.md
schema/: mysql.sql
src/: main.rs
src/drivers/: mod.rs  mysql.rs
src/ui/: mod.rs
