[package]
name = "slq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
mysql = { version = "24.0.0", default-features = false, features = ["minimal", "rustls", "webpki", "webpki-roots", "rustls-tls", "buffer-pool"] }
ratatui = "0.26.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.9"
url = "2.5.0"
xdg = "2.5.2"
